--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--
+    Open popup on page for debug: chrome-extension://(extension)/popup.html
+ -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +13,11 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
-
 <body class="p-3">
     <div class="wrapper">
     <div class="card mb-2">
         <div class="card-body">
+            <div id="message"></div>
             <button tabindex="0" class="btn btn-dark w-100 mb-3" id="toggle-issues">
                 Toggle
                 <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="joomla" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-joomla fa-w-14 fa-2x"><path fill="currentColor" d="M.6 92.1C.6 58.8 27.4 32 60.4 32c30 0 54.5 21.9 59.2 50.2 32.6-7.6 67.1.6 96.5 30l-44.3 44.3c-20.5-20.5-42.6-16.3-55.4-3.5-14.3 14.3-14.3 37.9 0 52.2l99.5 99.5-44 44.3c-87.7-87.2-49.7-49.7-99.8-99.7-26.8-26.5-35-64.8-24.8-98.9C20.4 144.6.6 120.7.6 92.1zm129.5 116.4l44.3 44.3c10-10 89.7-89.7 99.7-99.8 14.3-14.3 37.6-14.3 51.9 0 12.8 12.8 17 35-3.5 55.4l44 44.3c31.2-31.2 38.5-67.6 28.9-101.2 29.2-4.1 51.9-29.2 51.9-59.5 0-33.2-26.8-60.1-59.8-60.1-30.3 0-55.4 22.5-59.5 51.6-33.8-9.9-71.7-1.5-98.3 25.1-18.3 19.1-71.1 71.5-99.6 99.9zm266.3 152.2c8.2-32.7-.9-68.5-26.3-93.9-11.8-12.2 5 4.7-99.5-99.7l-44.3 44.3 99.7 99.7c14.3 14.3 14.3 37.6 0 51.9-12.8 12.8-35 17-55.4-3.5l-44 44.3c27.6 30.2 68 38.8 102.7 28 5.5 27.4 29.7 48.1 58.9 48.1 33 0 59.8-26.8 59.8-60.1 0-30.2-22.5-55-51.6-59.1zm-84.3-53.1l-44-44.3c-87 86.4-50.4 50.4-99.7 99.8-14.3 14.3-37.6 14.3-51.9 0-13.1-13.4-16.9-35.3 3.2-55.4l-44-44.3c-30.2 30.2-38 65.2-29.5 98.3-26.7 6-46.2 29.9-46.2 58.2C0 453.2 26.8 480 59.8 480c28.6 0 52.5-19.8 58.6-46.7 32.7 8.2 68.5-.6 94.2-26 32.1-32 12.2-12.4 99.5-99.7z" class=""></path></svg>
@@ -37,7 +39,6 @@
             </div>
         </div>
     </div>
-
     <div class="card mb-2">
         <div class="card-body">
             <h6 class="card-title">Useful links:</h6>
@@ -45,13 +46,30 @@
             <a href="https://github.com/joomla-extensions/patchtester/releases" target="_blank">Download Joomla Patch tester</a><br>
         </div>
     </div>
-
     <div class="card mb-2">
         <div class="card-body">
-            <h6>Create test image:</h6>
+            <h6>Create Unspash placeholder image:</h6>
+            <div class="form-group row mt-3">
+                <div class="col-6">
+                    <label for="exampleSelect">Sizes Preset:</label>
+                    <select id="presetSize" class="form-control form-select">
+                        <option value="800x400">Default</option>
+                        <option value="640x480">640 x 480 px</option>
+                        <option value="800x600">800 x 400 px</option>
+                        <option value="800x600">800 x 600 px</option>
+                        <option value="800x800">800 x 800 px</option>
+                        <option value="1200x600">1200 x 600 px</option>
+                        <option value="1200x800">1200 x 800 px</option>
+                    </select>
+                </div>
+                <div class="col-6">
+                    <label for="searchTerm">Add search term:</label>
+                    <input class="form-control" id="searchTerm" type="text" placeholder="nature,woods">
+                </div>
+            </div>
             <div class="form-group row mt-3">
                 <div class="col-4">
-                    <div class="input-group input-group-sm">
+                    <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text">W</span>
                         </div>
@@ -59,7 +77,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="input-group input-group-sm">
+                    <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text">H</span>
                         </div>
@@ -67,18 +85,19 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="input-group input-group-sm"></div>
-                    <button class="btn btn-success" id="selectUrlLink">
+                    <div class="d-flex justify-content-end">
+                    <button class="btn btn-success me-1" id="selectUrlLink">
                         <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="copy" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-copy fa-w-14 fa-2x"><path fill="currentColor" d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z" class=""></path></svg>
                     </button>
                     <button class="btn btn-outline-dark" id="gotoUrlLink">
-                        <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="external-link" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-external-link fa-w-16 fa-2x"><path fill="currentColor" d="M497.6,0,334.4.17A14.4,14.4,0,0,0,320,14.57V47.88a14.4,14.4,0,0,0,14.69,14.4l73.63-2.72,2.06,2.06L131.52,340.49a12,12,0,0,0,0,17l23,23a12,12,0,0,0,17,0L450.38,101.62l2.06,2.06-2.72,73.63A14.4,14.4,0,0,0,464.12,192h33.31a14.4,14.4,0,0,0,14.4-14.4L512,14.4A14.4,14.4,0,0,0,497.6,0ZM432,288H416a16,16,0,0,0-16,16V458a6,6,0,0,1-6,6H54a6,6,0,0,1-6-6V118a6,6,0,0,1,6-6H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V304A16,16,0,0,0,432,288Z" class=""></path></svg></button>
+                        <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="external-link" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="svg-inline--fa fa-external-link fa-w-16 fa-2x"><path fill="currentColor" d="M497.6,0,334.4.17A14.4,14.4,0,0,0,320,14.57V47.88a14.4,14.4,0,0,0,14.69,14.4l73.63-2.72,2.06,2.06L131.52,340.49a12,12,0,0,0,0,17l23,23a12,12,0,0,0,17,0L450.38,101.62l2.06,2.06-2.72,73.63A14.4,14.4,0,0,0,464.12,192h33.31a14.4,14.4,0,0,0,14.4-14.4L512,14.4A14.4,14.4,0,0,0,497.6,0ZM432,288H416a16,16,0,0,0-16,16V458a6,6,0,0,1-6,6H54a6,6,0,0,1-6-6V118a6,6,0,0,1,6-6H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V304A16,16,0,0,0,432,288Z" class=""></path></svg>
+                    </button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
     <script src="popup.js"></script>
 </body>
 </html>
